Fix: Prevent input from zooming on mobile; Style: Remove border-radius from input for mobile viewing

--- a/random/css/styles.css
+++ b/random/css/styles.css
@@ -45,7 +45,8 @@ p {
     margin: 0;
 }
 
-input[type="number"] {
+input {
+    border-radius: 0;
     font-family: inherit;
 }
 
